# nvr-client

./: .eslintignore  .eslintrc.js  .stylelintrc.js  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  splashscreen.html  vite.config.js
.github/workflows/: release.yml
public/css/: style.css
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  menu.rs
src/components/: DahuaVideo.vue
src/utils/: async-task-queue.js  websocket.js
