[package]
authors = ["huangjb"]
description = "A NVR Client"
edition = "2021"
license = "MIT"
name = "nvr-client"
repository = "https://github.com/csjiabin/nvr-client.git"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.4", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.4", features = ["shell-open", "windows7-compat", "devtools"] }
# tauri-plugin-websocket = {path = "../plugin/tauri-plugin-websocket"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
